<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">The Big Parent</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">Map</string>
    <string name="title_activity_map_overlay">Map</string>
    <string name="title_activity_add_location">AddLocationActivity</string>
    <string name="add_location">Add Location</string>
    <string name="add_location_name">Location Name:</string>
    <string name="add_location_name_hint">add name...</string>
    <string name="add_location_radius">Radius:</string>
    <string name="add_location_radius_hint">add radius...</string>
    <string name="add_location_contact">Contact:</string>
    <string name="add_contact_button">Add Contact</string>
    <string name="title_activity_contact_list">ContactListActivity</string>
    <string name="title_activity_marker_options">MarkerOptionsActivity</string>
    <string name="address">Address</string>
    <string name="locationName">Location Name:</string>
    <string name="radius">Radius:</string>
    <string name="meters">meters</string>
    <string name="days">Days:</string>
    <string name="sunday">sun</string>
    <string name="monday">mon</string>
    <string name="tuesday">tue</string>
    <string name="wednesday">wed</string>
    <string name="thursday">thu</string>
    <string name="friday">fri</string>
    <string name="saturday">sat</string>
    <string name="hour_start">Tracking starts at:</string>
    <string name="delete_location">Delete Location</string>
    <string name="hour_end">Tracking end at:</string>
    <string name="action_locations">Locations list</string>
    <string name="startGps">Start Tracking</string>
    <string name="stopGps">Stop Tracking</string>
    <string name="appwidget_text">The Big Parent</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_time">TimeActivity</string>
    <string name="title_activity_add_time">AddTimeActivity</string>
    <string name="tracking_time">All my Tracking Time</string>
    <string name="add_tracking_time">Add Tracking Time</string>
    <string name="action_add_time">Add Time</string>
    <string name="pick_hours">Choose Hours of your tracking</string>
    <string name="pick_days">Choose Days of your tracking</string>
    <string name="no_repeat">No Repeat</string>
    <string name="contact_name">Contact Name:</string>
    <string name="allTrackingTime">View all tracking time</string>
    <string name="goTo_map">Go to MAP</string>
    <string name="title_activity_all_tracking_time">AllTrackingTimeActivity</string>
    <string name="title_activity_all_marker">AllMarkerActivity</string>
    <string name="location_id">ID:</string>
    <string name="action_deleteAll_times">Delete all times</string>
    <string name="action_delete_marker">Delete Marker</string>
    <string name="tracker_time">The current tracking time is:</string>
    <string name="allMarker">View my markers</string>
    <string name="no_tracker_time">You have no tracking time for this hour of the day!</string>
    <string name="edit_radius">Edit radius</string>
    <string name="Save" />
    <string name="save">Save</string>
    <string name="action_home">Home</string>
    <string name="action_map">Map</string>
    <string name="contact_phone">Contact Phone</string>
    <string name="alertTitle_wrong_tracking_hours">Wrong Tracking Hours</string>
    <string name="alertMessage_wrong_tracking_hours">Start tracking hour needs to be before end tracking hour</string>
    <string name="alertTitle_empty_fields">Empty fields</string>
    <string name="alertMessage_empty_days">You have to choose day(s) of tracking!</string>
    <string name="alertTitle_delete_all_times">Delete All Times</string>
    <string name="alertMessage_delete_all_times">Are you sure you want to delete all Times? You cannot undo it!</string>
    <string name="alertToast_all_times_deleted">All times deleted</string>
    <string name="alertTitle_delete_time">Delete Time</string>
    <string name="alertMessage_delete_time">Are you sure you want to delete this tracking time?</string>
    <string name="alertToast_deleted_time">Deleted time:</string>
    <string name="alertToast_deleted_marker">Deleted marker:</string>
    <string name="alertTitle_delete_marker">Delete Marker</string>
    <string name="alertMessage_delete_marker">Are you sure you want to delete this Marker? It will also erase all your tracking time!</string>
    <string name="widget_bigParent_on">The Big Parent: ON</string>
    <string name="widget_bigParent_off">The Big Parent: OFF</string>
    <string name="alertMessage_turn_on_location">Please turn on location on the device</string>
    <string name="alertTitle_location_off">Locations are OFF!</string>
    <string name="alertMessage_hours_passed">Your tracking hours have already passed</string>
    <string name="alertMessage_fill_fields">Please fill all the fields!</string>


</resources>
