<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--Title - Welcome-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginBottom="100dp">


        <TextView
            style="@style/Title"
            android:id="@+id/main_title"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           />

    </LinearLayout>

    <!--Map Button-->
    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/map_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/map"
            android:background="@drawable/map"
            android:onClick="onClick_map_button"
           />

        <Button
            android:id="@+id/startGps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startGps"
            android:onClick="onClick_startGps"
            />

        <Button
            android:id="@+id/stopGps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stopGps"
            android:onClick="onClick_stopGps"
            />


    </LinearLayout>


</LinearLayout>
