<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:id="@+id/main_layout_add_location"
    android:background="@drawable/back"
    tools:context="com.thebigparent.sg.thebigparent.Activities.AddLocationActivity">

    <!--Title of activity-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/abc_action_bar_default_height_material">

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Display1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_location"/>

    </LinearLayout>

    <!--User input-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/abc_action_bar_default_height_material">


    <!--Add Location Name-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--Name:-->
            <TextView
                style="@style/Base.TextAppearance.AppCompat.Large.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_location_name"
                />

            <EditText
                android:id="@+id/add_location_edit_text_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_location_name_hint"
                />
            </LinearLayout>

 <!--Add Location Radius-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--Radius:-->
            <TextView
                style="@style/Base.TextAppearance.AppCompat.Large.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_location_radius"
                />

            <EditText
                android:id="@+id/add_location_edit_text_radius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="100"
                android:enabled="false"
                android:hint="@string/add_location_radius_hint"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_radius_button"
                android:onClick="onClick_editRadius_button"
                android:text="@string/edit_radius"
                />
            </LinearLayout>

 <!--Add Location Contact-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/abc_action_bar_default_height_material">


        <!--Contact:-->
            <TextView
                style="@style/Base.TextAppearance.AppCompat.Large.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_location_contact"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/contact_name"
                android:text="@string/add_contact_button"
                android:layout_marginRight="@dimen/abc_action_bar_default_height_material"
                />
           <Button
               style="@style/Base.TextAppearance.AppCompat.Button"
               android:id="@+id/add_contact_button"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:onClick="onClick_add_contact_button"
               android:text="@string/add_contact_button"/>
            </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

>
        <Button
            android:id="@+id/add_location_button"
            android:text="@string/add_location"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onCLick_add_location_button"
            android:drawableLeft="@drawable/ic_action_marker"/>
    </LinearLayout>
</LinearLayout>
