<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.thebigparent.sg.thebigparent.Activities.AddTimeActivity">

    <!-- Title -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/abc_action_bar_default_height_material">

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Display1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_tracking_time"/>
    </LinearLayout>

    <!-- Linear of Hours -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/abc_action_button_min_height_material"
        android:layout_gravity="center">

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_hours"
            android:layout_marginBottom="@dimen/abc_action_button_min_height_material"/>

        <!-- Hours -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">


            <!-- Hours Start -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hour_start"/>

                <!-- Number Picker Start -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:orientation="horizontal">

                    <NumberPicker
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:id="@+id/number_picker_hour_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >
                    </NumberPicker>

                    <NumberPicker
                        android:id="@+id/number_picker_min_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </NumberPicker>
                </LinearLayout>
                <!--End Number Picker Start -->
            </LinearLayout>
            <!-- End Hours Start -->

            <!-- Hours End -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hour_end"/>

                <!-- Number Picker End -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <NumberPicker
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:id="@+id/number_picker_hour_end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </NumberPicker>

                    <NumberPicker
                        android:id="@+id/number_picker_min_end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </NumberPicker>
                </LinearLayout>
                <!--End Number Picker End-->

            </LinearLayout>
            <!-- End Hours End-->

        </LinearLayout>
        <!-- End Hours -->
    </LinearLayout>
    <!--End Hours with title-->

    <!--Linear Days -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/abc_action_bar_default_height_material">

        <!-- Description -->
        <TextView
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_days"
            android:layout_marginBottom="@dimen/abc_action_button_min_height_material"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <!-- NO REPEAT -->
            <LinearLayout
                android:id="@+id/linear_no_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <CheckBox
                    style="@style/Base.TextAppearance.AppCompat.Button"
                    android:id="@+id/no_repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_repeat"
                    android:checked="true"
                    />

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <!-- Days of week-->
            <LinearLayout
                android:id="@+id/linear_days_of_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <CheckBox
                    android:id="@+id/sunday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunday"
                    android:layout_marginRight="12dp"/>

                <CheckBox
                    android:id="@+id/monday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monday"
                    android:layout_marginRight="12dp"/>
                <CheckBox
                    android:id="@+id/tuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tuesday"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/wednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wednesday"
                    android:layout_marginRight="12dp"/>
                <CheckBox
                    android:id="@+id/thursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thursday"
                    android:layout_marginRight="12dp"/>
                <CheckBox
                    android:id="@+id/friday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friday"
                    android:layout_marginRight="12dp"/>
                <CheckBox
                    android:id="@+id/saturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saturday"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_tracking_time"
            android:background="@color/material_deep_teal_500"
            android:onClick="onClick_add_tracking_time"/>
        </LinearLayout>
</LinearLayout>
</ScrollView>