<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/main_layout_marker_options"
    android:orientation="vertical"
    android:background="@drawable/backgrounds"
    tools:context="com.thebigparent.sg.thebigparent.Activities.MarkerOptionsActivity">

    <!-- Name -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/abc_action_bar_default_height_material">

        <TextView
                style="@style/Base.TextAppearance.AppCompat.Display1"
                android:id="@+id/location_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

    </LinearLayout>

    <!-- Fields -->
    <LinearLayout
        style="@style/Base.TextAppearance.AppCompat.Inverse"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/abc_action_bar_default_height_material">

        <!-- Location Name -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Title.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_name"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Inverse"
                android:id="@+id/contact_name_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!-- Radius -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/abc_action_bar_default_height_material">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Title.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radius"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Inverse"
                android:id="@+id/radius_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meters"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

        </LinearLayout>


    </LinearLayout>

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        >

             <!--Tracking Time -->
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tracking_time"
            android:onClick="onClick_tracking_time"
            android:id="@+id/all_tracking_time_button"
            />

        <!-- Add Tracking Time -->
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_tracking_time"
            android:onClick="onClick_add_tracking_time"
           />
<!-- android:background="@color/wallet_holo_blue_light"-->
        <!--Delete Location-->
        <Button
            android:id="@+id/delete_location_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/abc_action_bar_default_height_material"
            android:text="@string/delete_location"
            android:onClick="onClick_delete_location"
            android:background="@color/common_signin_btn_default_background"
            />

    </LinearLayout>

</LinearLayout>
</ScrollView>